--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TOP 5 WAYS TO MAKE MONEY ONLINE</title>
+    <meta name="google-site-verification" content="2RBFlf_Rq5LL_lk2-jPRGk0BquABZaElaWuHxwy6YhQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:700,400&display=swap" rel="stylesheet">
@@ -118,4 +119,5 @@ One of the highest-known achievers posted approximately 9,000 memes and earned a
         </div>
     </footer>
 </body>
+
 </html>
